<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:text="@string/write_titile_msg_chager"
        android:textColor="@color/text_button"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/write_name"
            android:textColor="@color/text_button"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/et_input_name"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/box"
            android:hint="name"
            android:singleLine="true"
            android:textColor="@color/text_button"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_nums"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/write_nums"
            android:textColor="@color/text_button"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/et_input_nums"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/box"
            android:singleLine="true"
            android:textColor="@color/text_button"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/write_account"
            android:textColor="@color/text_button"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/et_input_account"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/box"
            android:singleLine="true"
            android:textColor="@color/text_button"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_balance"
            android:textColor="@color/text_button"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/et_input_balance"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/box"
            android:singleLine="true"
            android:textColor="@color/text_button"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_recharge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_recharge"
        android:textColor="@color/text_button" 
        android:textSize="28sp"
        android:layout_marginTop="10dp">
    </TextView>

    <EditText
        android:id="@+id/et_input_recharge"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:background="@drawable/box"
        android:numeric="integer"
        android:singleLine="true"
        android:textColor="@color/text_button"
        android:textStyle="bold" />

</LinearLayout>